Multiple updates based on Dr. K comments.
Updated models, updated writeup, updated method of param serches.
Please look at Exercise4_RFCMLP.ipynb for Code, and ExerciseR.pdf for writeup.

--- a/Exercise4.ipynb
+++ b/Exercise4.ipynb
@@ -479,11 +479,10 @@
    "outputs": [],
    "source": [
     "#Define list of models to evaluate\n",
-    "models = [\n",
-    "    KNeighborsClassifierlassifiersClassifier, 'KNeighborsClassifier()'],\n",
+    "models = {\n",
+    "    ['knn', 'KNeighborsClassifier()'],\n",
     "    ['sgd', 'SGDClassifier()'],\n",
-    "    ['mlpc', 'MLPClassifier()']\n",
-    "    ]"
+    "    ['mlpc', 'MLPClassifier()']}"
    ]
   },
   {
